--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -9,7 +9,8 @@
       "SourceDir": "src",
       "DistributionDir": "build",
       "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start"
+      "StartCommand": "npm run-script start",
+      "ServerlessContainers": false
     }
   },
   "providers": [
