--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,29 @@
 {
+  "api": {
+    "familyhelper": {
+      "dependsOn": [],
+      "output": {
+        "authConfig": {
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authfamilyhelperb28cdbf8"
+              }
+            }
+          ],
+          "defaultAuthentication": {
+            "apiKeyConfig": {
+              "apiKeyExpirationDays": 7
+            },
+            "authenticationType": "API_KEY"
+          }
+        }
+      },
+      "providerPlugin": "awscloudformation",
+      "service": "AppSync"
+    }
+  },
   "auth": {
     "familyhelperb28cdbf8": {
       "customAuth": false,
