--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,4 @@
 {
-  "whyContinueWithGen1": "Prefer not to answer",
   "projectName": "familyhelper",
   "version": "3.1",
   "frontend": "javascript",
@@ -9,8 +8,7 @@
       "SourceDir": "src",
       "DistributionDir": "build",
       "BuildCommand": "npm run-script build",
-      "StartCommand": "npm run-script start",
-      "ServerlessContainers": false
+      "StartCommand": "npm run-script start"
     }
   },
   "providers": [
